cargar aeronaves compatibles con la pieza